<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFundo"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/placa_antiga"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_letras"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:fontFamily="@font/mandator"
            android:importantForAutofill="no"
            android:gravity="center"
            android:hint="@string/hint_letras"
            android:inputType="textCapCharacters"
            android:paddingLeft="32dp"
            android:paddingTop="35dp"
            android:paddingRight="3dp"
            android:textColor="@android:color/black"
            android:textColorLink="@color/colorPlacaCinza"
            android:textIsSelectable="false"
            android:textSize="55sp"
            android:paddingEnd="3dp"
            android:paddingStart="32dp"
            android:layout_marginStart="8dp"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/mandator"
            android:gravity="center"
            android:paddingTop="30dp"
            android:text="@string/traco"
            android:textColor="@android:color/black"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/edit_numeros"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/mandator"
            android:gravity="center"
            android:hint="@string/hint_numeros"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingLeft="3dp"
            android:paddingTop="35dp"
            android:paddingRight="32dp"
            android:textColor="@android:color/black"
            android:textSize="55sp"
            android:paddingEnd="32dp"
            android:paddingStart="3dp"
            tools:targetApi="o" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_consultar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/aldrich"
        android:text="@string/consultar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/txt_informe"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>